--- a/App.config
+++ b/App.config
@@ -1,19 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="winSrvMonitor" type="WindowsServiceMonitor.Configuration.MonitorConfig, WindowsServiceMonitor" />
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="winSrvMonitor" type="WindowsServiceMonitor.Configuration.MonitorConfig, WindowsServiceMonitor"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
 
   <winSrvMonitor>
+    <!-- enable指定是否监控服务在其停止的时候自动启动 -->
     <Server enable="true">
+      <!--服务名称-->
       <Name>ICCServer</Name>
+      <!--进程名，在无法正常结束服务的时候需要强制杀死进程-->
       <ProcessName>ICCServer</ProcessName>
+      <!--enable指定是否自动重启服务-->
       <AutoRestart enable="true">
+        <!--每隔几天重启-->
         <Days>0</Days>
+        <!--每天几点重启-->
         <Time>17:35:00</Time>
       </AutoRestart>
     </Server>
@@ -23,12 +29,12 @@
     <!--定义输出到文件中-->
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
       <!--定义文件存放位置-->
-      <file value=".\Log\" />
-      <appendToFile value="true" />
-      <rollingStyle value="Date" />
-      <datePattern value="&quot;WindowsServerMonitor_Log_&quot;yyyyMMdd&quot;.txt&quot;" />
-      <staticLogFileName value="false" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <file value=".\Log\"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <datePattern value="&quot;WindowsServerMonitor_Log_&quot;yyyyMMdd&quot;.txt&quot;"/>
+      <staticLogFileName value="false"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
       <layout type="log4net.Layout.PatternLayout">
         <!--
         %m(message):输出的日志消息，如ILog.Debug(…)输出的一条消息
@@ -44,25 +50,25 @@
         %exception:异常信息，日志事件中必须存了一个异常对象，如果日志事件不包含没有异常对象，将什么也不输出。异常输出完毕后会跟一个换行。
         %-数字:表示该项的最小长度，如果不够，则用空格填充
         -->
-        <conversionPattern value="[时间]%d%n[级别]:%p%n[线程]:%t%n[对象]:%c%n[方法]:%M%n[行号]:%L%n[内容]:%m%n[异常]:%exception%n---------------------------------------------------------------%n" />
+        <conversionPattern value="[时间]%d%n[级别]:%p%n[线程]:%t%n[对象]:%c%n[方法]:%M%n[行号]:%L%n[内容]:%m%n[异常]:%exception%n---------------------------------------------------------------%n"/>
       </layout>
     </appender>
     <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
       <mapping>
-        <level value="ERROR" />
-        <foreColor value="White" />
-        <backColor value="Red, HighIntensity" />
+        <level value="ERROR"/>
+        <foreColor value="White"/>
+        <backColor value="Red, HighIntensity"/>
       </mapping>
       <mapping>
-        <level value="INFO" />
-        <backColor value="Green" />
+        <level value="INFO"/>
+        <backColor value="Green"/>
       </mapping>
       <mapping>
-        <level value="DEBUG" />
-        <backColor value="Yellow" />
+        <level value="DEBUG"/>
+        <backColor value="Yellow"/>
       </mapping>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[%-5level]%date [T:%t] %m%n" />
+        <conversionPattern value="[%-5level]%date [T:%t] %m%n"/>
       </layout>
     </appender>
     <root>
@@ -73,11 +79,11 @@
       <!--WARN:警告-->
       <!--INFO:一般信息-->
       <!--DEBUG:调试信息-->
-      <level value="DEBUG" />
+      <level value="DEBUG"/>
       <!--文件形式记录日志-->
-      <appender-ref ref="RollingFileAppender" />
+      <appender-ref ref="RollingFileAppender"/>
       <!--控制台记录日志-->
-      <appender-ref ref="ColoredConsoleAppender" />
+      <appender-ref ref="ColoredConsoleAppender"/>
     </root>
   </log4net>
 </configuration>
